--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </address>
         <button type="button" class="header-mobile-btn" data-menu-open>
           <svg class="header-btn-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-menu"></use>
+            <use href="./images/icons.svg#icon-mob-line"></use>
           </svg>
         </button>
       </div>
@@ -670,7 +670,7 @@
                 required
               />
               <svg class="input-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-persone"></use>
+                <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
           </div>
@@ -683,7 +683,6 @@
                 name="user-phone"
                 id="user-phone"
                 class="form-input"
-                value="+380"
                 required
               />
               <svg class="input-icon" width="18" height="24">
